--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: phutils
 Type: Package
-Title: Utilities for the Public Health Intelligence Team in Medway
+Title: WIBBLE Utilities for the Public Health Intelligence Team in Medway
 Version: 1.1.6
 Date: 2013-02-02
 Author: David Whiting, Mark Chambers, Laura Bottle
