--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,28 @@
 Package: phutils
 Type: Package
 Title: Utilities for the Public Health Intelligence Team in Medway
-Version: 1.1.8
+Version: 1.1.9
 Date: 2013-02-21
 Author: David Whiting, Mark Chambers, Laura Bottle
 Maintainer: David Whiting  <dwhiting@nhs.net>
-Description: A small and growing collection of utilities for Public Health Intelligence in Medway. 
+Description: A small and growing collection of utilities for Public Health
+    Intelligence in Medway.
 License: GPL v3
+Collate:
+    'age.groups.R'
+    'age.labels.R'
+    'cipoisson.R'
+    'ciproportion.R'
+    'dateToQuarter.R'
+    'fix.dumb.excel.percents.and.commas.R'
+    'html.data.frame.R'
+    'ls.rda.R'
+    'make.pop.R'
+    'penultimate.R'
+    'phutils-internal.R'
+    'phutils-package.R'
+    'quarterToDates.R'
+    'searchable.html.table.R'
+    'sparkline.R'
+    'splice.R'
+    'status.log.R'
