--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: phutils
 Type: Package
 Title: Utilities for the Public Health Intelligence Team in Medway
-Version: 1.1.9
-Date: 2013-02-21
+Version: 1.1.11
+Date: 2013-03-26
 Author: David Whiting, Mark Chambers, Laura Bottle
 Maintainer: David Whiting  <dwhiting@nhs.net>
 Description: A small and growing collection of utilities for Public Health
@@ -26,3 +26,4 @@ Collate:
     'sparkline.R'
     'splice.R'
     'status.log.R'
+    'is.valid.NHSnum.R'
