Added exports to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,2 +1,16 @@
-exportPattern("^[[:alpha:]]+")
-
+export(age.groups)
+export(age.labels)
+export(cipoisson)
+export(ci.proportion)
+export(dateToQuarter)
+export(fix.dumb.excel.percents.and.commas)
+export(HTML.data.frame)
+export(is.valid.NHSnum)
+export(ls.rda)
+export(make.pop)
+export(penultimate)
+export(quarterToDates)
+export(searchable.html.table)
+export(sparkline)
+export(splice)
+export(status.log)
