--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: phutils
 Type: Package
 Title: Utilities for the Public Health Intelligence Team in Medway
-Version: 1.1.13
-Date: 2013-04-15
+Version: 1.1.14
+Date: 2013-05-21
 Author: David Whiting, Mark Chambers, Laura Bottle
 Maintainer: David Whiting  <dwhiting@nhs.net>
 Description: A small and growing collection of utilities for Public Health
@@ -27,3 +27,4 @@ Collate:
     'splice.R'
     'status.log.R'
     'is.valid.NHSnum.R'
+    'rsed.R'
