--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(ls.rda)
 export(make.pop)
 export(penultimate)
 export(quarterToDates)
+export(rag.blocks)
 export(searchable.html.table)
 export(sparkline)
 export(splice)
