--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: phutils
 Type: Package
 Title: Utilities for the Public Health Intelligence Team in Medway
-Version: 1.1.14
-Date: 2013-05-21
+Version: 1.1.15
+Date: 2013-05-26
 Author: David Whiting, Mark Chambers, Laura Bottle
 Maintainer: David Whiting  <dwhiting@nhs.net>
 Description: A small and growing collection of utilities for Public Health
@@ -28,3 +28,4 @@ Collate:
     'status.log.R'
     'is.valid.NHSnum.R'
     'rsed.R'
+    'rag.blocks.R'
