Added rsed() to namespace; version bump to 1.1.16

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(make.pop)
 export(penultimate)
 export(quarterToDates)
 export(rag.blocks)
+export(rsed)
 export(searchable.html.table)
 export(sparkline)
 export(splice)
