--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: phutils
 Type: Package
 Title: Utilities for the Public Health Intelligence Team in Medway
-Version: 1.1.15
-Date: 2013-05-26
+Version: 1.1.16
+Date: 2013-05-29
 Author: David Whiting, Mark Chambers, Laura Bottle
-Maintainer: David Whiting  <dwhiting@nhs.net>
+Maintainer: David Whiting  <david.whiting@publichealth.me.uk>
 Description: A small and growing collection of utilities for Public Health
     Intelligence in Medway.
 License: GPL v3
