--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,10 +1,13 @@
 export(age.groups)
 export(age.labels)
 export(age.years)
+export(between)
 export(cipoisson)
 export(ci.proportion)
 export(dateToQuarter)
 export(fix.dumb.excel.percents.and.commas)
+export(graph.power.means)
+export(graph.power.prop)
 export(HTML.data.frame)
 export(is.valid.NHSnum)
 export(ls.rda)
@@ -13,6 +16,9 @@ export(penultimate)
 export(quarterToDates)
 export(rag.blocks)
 export(rsed)
+export(samp.clus)
+export(sampsi.means)
+export(sampsi.prop)
 export(searchable.html.table)
 export(sparkline)
 export(splice)
