--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: phutils
 Type: Package
 Title: Utilities for the Public Health Intelligence Team in Medway
-Version: 1.1.17
-Date: 2013-05-29
+Version: 1.1.18
+Date: 2013-07-21
 Author: David Whiting, Mark Chambers, Laura Bottle
 Maintainer: David Whiting  <david.whiting@publichealth.me.uk>
 Description: A small and growing collection of utilities for Public Health
@@ -30,3 +30,9 @@ Collate:
     'rsed.R'
     'rag.blocks.R'
     'age.years.R'
+    'between.R'
+    'graph.power.means.R'
+    'graph.power.prop.R'
+    'samp.clus.R'
+    'sampsi.means.R'
+    'sampsi.prop.R'
