--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(is.valid.NHSnum)
 export(ls.rda)
 export(make.pop)
 export(penultimate)
+export(png.scalable)
 export(quarterToDates)
 export(rag.blocks)
 export(rsed)
