--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(between)
 export(cipoisson)
 export(ci.proportion)
 export(dateToQuarter)
+export(file.grep)
 export(fix.dumb.excel.percents.and.commas)
 export(graph.power.means)
 export(graph.power.prop)
