--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: phutils
 Type: Package
 Title: Utilities for the Public Health Intelligence Team in Medway
-Version: 1.1.20
-Date: 2013-08-20
+Version: 1.1.21
+Date: 2013-08-29
 Author: David Whiting, Mark Chambers, Laura Bottle
 Maintainer: David Whiting  <david.whiting@publichealth.me.uk>
 Description: A small and growing collection of utilities for Public Health
@@ -37,3 +37,4 @@ Collate:
     'sampsi.means.R'
     'sampsi.prop.R'
     'png.scalable.R'
+    'file.grep.R'
