--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(penultimate)
 export(png.scalable)
 export(quarterToDates)
 export(rag.blocks)
+export(read.snap)
 export(rsed)
 export(samp.clus)
 export(sampsi.means)
