--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: phutils
 Type: Package
 Title: Utilities for the Public Health Intelligence Team in Medway
-Version: 1.1.21
-Date: 2013-08-29
+Version: 1.1.22
+Date: 2013-09-17
 Author: David Whiting, Mark Chambers, Laura Bottle
 Maintainer: David Whiting  <david.whiting@publichealth.me.uk>
 Description: A small and growing collection of utilities for Public Health
@@ -38,3 +38,4 @@ Collate:
     'sampsi.prop.R'
     'png.scalable.R'
     'file.grep.R'
+    'read.snap.R'
