--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@ export(age.groups)
 export(age.labels)
 export(age.years)
 export(between)
+export(ci.mean)
 export(cipoisson)
 export(ci.proportion)
 export(dateToQuarter)
