--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: phutils
 Type: Package
 Title: Utilities for the Public Health Intelligence Team in Medway
-Version: 1.1.22
+Version: 1.1.23
 Date: 2013-09-17
 Author: David Whiting, Mark Chambers, Laura Bottle
 Maintainer: David Whiting  <david.whiting@publichealth.me.uk>
@@ -39,3 +39,4 @@ Collate:
     'png.scalable.R'
     'file.grep.R'
     'read.snap.R'
+    'ci.mean.R'
