--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(fix.dumb.excel.percents.and.commas)
 export(graph.power.means)
 export(graph.power.prop)
 export(HTML.data.frame)
+export(isdebugged.all)
 export(is.valid.NHSnum)
 export(ls.rda)
 export(make.pop)
@@ -23,6 +24,7 @@ export(samp.clus)
 export(sampsi.means)
 export(sampsi.prop)
 export(searchable.html.table)
+export(sourceDir)
 export(sparkline)
 export(splice)
 export(status.log)
