--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: phutils
 Type: Package
 Title: Utilities for the Public Health Intelligence Team in Medway
-Version: 1.1.22
-Date: 2013-09-17
+Version: 1.1.23
+Date: 2013-12-28
 Author: David Whiting, Mark Chambers, Laura Bottle
 Maintainer: David Whiting  <david.whiting@publichealth.me.uk>
 Description: A small and growing collection of utilities for Public Health
@@ -39,3 +39,5 @@ Collate:
     'png.scalable.R'
     'file.grep.R'
     'read.snap.R'
+    'isdebugged.all.R'
+    'sourceDir.R'
