A load of cleaning up mainly of help file directives.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,14 +5,22 @@ export(age.years)
 export(between)
 export(ci.mean)
 export(ci.proportion)
+export(ci.standardised.rate)
 export(cipoisson)
+export(create.project)
 export(dateToQuarter)
+export(excelToCsv)
 export(file.grep)
+export(fin.yr)
+export(first.and.last)
 export(fix.dumb.excel.percents.and.commas)
+export(get.HSCIC)
+export(get.sus.credentials)
 export(graph.power.means)
 export(graph.power.prop)
 export(is.valid.NHSnum)
 export(isdebugged.all)
+export(ladderplot)
 export(ls.rda)
 export(make.pop)
 export(penultimate)
