Update the NAMESPACE with the new functions (using roxygen2)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,9 @@ export(age.labels)
 export(age.years)
 export(between)
 export(ci.mean)
+export(ci.poisson)
 export(ci.proportion)
 export(ci.standardised.rate)
-export(cipoisson)
 export(create.project)
 export(dateToQuarter)
 export(excelToCsv)
