Updated NAMESPACE so new functions can be found.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(ls.rda)
 export(make.pop)
 export(penultimate)
 export(png.scalable)
+export(pw)
 export(quarterToDates)
 export(rag.blocks)
 export(read.snap)
@@ -32,6 +33,7 @@ export(rsed)
 export(samp.clus)
 export(sampsi.means)
 export(sampsi.prop)
+export(searchable.dataframe.viewer)
 export(searchable.html.table)
 export(sourceDir)
 export(sparkline)
