--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(rsed)
 export(samp.clus)
 export(sampsi.means)
 export(sampsi.prop)
+export(search.projects)
 export(searchable.dataframe.viewer)
 export(searchable.html.table)
 export(sourceDir)
