Updated NAMESPACE to export read.excel()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(png.scalable)
 export(pw)
 export(quarterToDates)
 export(rag.blocks)
+export(read.excel)
 export(read.snap)
 export(rsed)
 export(samp.clus)
