--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(isdebugged.all)
 export(ladderplot)
 export(ls.rda)
 export(make.pop)
+export(numbers2words)
 export(penultimate)
 export(png.scalable)
 export(pw)
@@ -43,3 +44,4 @@ export(sourceDir)
 export(sparkline)
 export(splice)
 export(status.log)
+export(strsplit.element)
