--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(ci.mean)
 export(ci.poisson)
 export(ci.proportion)
 export(ci.standardised.rate)
+export(ci.standardised.ratio)
 export(create.project)
 export(dateToQuarter)
 export(excelToCsv)
