Updated NAMESPACE to add mergeSafely

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(isdebugged.all)
 export(ladderplot)
 export(ls.rda)
 export(make.pop)
+export(mergeSafely)
 export(numbers2words)
 export(penultimate)
 export(png.scalable)
