Added tcltk call in fix-snap()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(file.grep)
 export(fin.yr)
 export(first.and.last)
 export(fix.dumb.excel.percents.and.commas)
+export(fix.snap)
 export(get.HSCIC)
 export(get.sus.credentials)
 export(graph.power.means)
