--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(first.and.last)
 export(fix.dumb.excel.percents.and.commas)
 export(fix.snap)
 export(get.HSCIC)
+export(get.odbc.credentials)
 export(get.sus.credentials)
 export(graph.power.means)
 export(graph.power.prop)
