--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: phutils
 Type: Package
 Title: Utilities for the Public Health Intelligence Team in Medway
-Version: 1.2.21
-Date: 2015-07-09
+Version: 1.2.23
+Date: 2015-10-19
 Author: David Whiting, Mark Chambers, Laura Bottle
 Maintainer: David Whiting  <david.whiting@publichealth.me.uk>
 Description: A small and growing collection of utilities for Public Health
-    Intelligence in Medway. THIS IS A TEST
+    Intelligence in Medway. 
 License: GPL v3
