Export gitbash() so it can be used!

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(fix.snap)
 export(get.HSCIC)
 export(get.odbc.credentials)
 export(get.sus.credentials)
+export(gitbash)
 export(graph.power.means)
 export(graph.power.prop)
 export(is.valid.NHSnum)
