--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: phutils
 Type: Package
 Title: Utilities for the Public Health Intelligence Team in Medway
-Version: 1.2.30
-Date: 2016-04-12
+Version: 1.2.31
+Date: 2016-05-12
 Author: David Whiting, Mark Chambers, Laura Bottle
 Maintainer: David Whiting  <david.whiting@publichealth.me.uk>
 Description: A small and growing collection of utilities for Public Health
-    Intelligence in Medway. 
+    Intelligence in Medway.
 License: GPL v3
+RoxygenNote: 5.0.1
