Added updated NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(age.groups)
 export(age.labels)
 export(age.years)
 export(between)
+export(cases_noncases)
 export(ci.mean)
 export(ci.poisson)
 export(ci.proportion)
@@ -50,8 +51,10 @@ export(make.pop)
 export(mergeSafely)
 export(numbers2words)
 export(penultimate)
+export(percentile_plot)
 export(png.scalable)
 export(pop_summary)
+export(proportion_graphic)
 export(pw)
 export(quarterToDates)
 export(rag.blocks)
