--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,10 +8,12 @@ S3method(desc,factor)
 S3method(desc,integer)
 S3method(desc,numeric)
 export(Bottle)
+export(DESC)
 export(HTML.data.frame)
 export(LE)
 export(ODBC_connect)
 export(ODBC_connection_string)
+export(SHOW_TABLES)
 export(SQL_WHERE_SUS_ICD_codes)
 export(age.groups)
 export(age.labels)
@@ -56,6 +58,7 @@ export(png.scalable)
 export(pop_summary)
 export(proportion_graphic)
 export(pw)
+export(pyramid)
 export(quarterToDates)
 export(rag.blocks)
 export(read.excel)
@@ -74,4 +77,4 @@ export(sparkline)
 export(splice)
 export(status.log)
 export(strsplit.element)
-export(unicode_lookup)
+export(tidy_medway_postcodes)
