--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,6 +68,7 @@ export(rsed)
 export(samp.clus)
 export(sampsi.means)
 export(sampsi.prop)
+export(scatterhist)
 export(search.projects)
 export(searchable.dataframe.viewer)
 export(searchable.html.table)
