--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: phutils
 Type: Package
 Title: Utilities for the Public Health Intelligence Team in Medway
-Version: 1.2.39
-Date: 2016-10-03
+Version: 1.2.41
+Date: 2016-10-18
 Author: David Whiting, Mark Chambers, Laura Bottle
 Maintainer: David Whiting  <david.whiting@publichealth.me.uk>
 Description: A small and growing collection of utilities for Public Health
     Intelligence in Medway.
-License: GPL v3
+License: GPL-3
 RoxygenNote: 5.0.1
