--- a/NAMESPACE
+++ b/NAMESPACE
@@ -76,6 +76,8 @@ export(slasher)
 export(sourceDir)
 export(sparkline)
 export(splice)
+export(splitscreen_pdf)
 export(status.log)
 export(strsplit.element)
 export(tidy_medway_postcodes)
+export(view_long)
