--- a/NAMESPACE
+++ b/NAMESPACE
@@ -75,6 +75,7 @@ export(searchable.html.table)
 export(slasher)
 export(sourceDir)
 export(sparkline)
+export(spc_plot)
 export(splice)
 export(splitscreen_pdf)
 export(status.log)
