--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(desc,default)
 S3method(desc,factor)
 S3method(desc,integer)
 S3method(desc,numeric)
+export("%notin%")
 export(Bottle)
 export(DESC)
 export(HTML.data.frame)
