--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,11 @@
 Package: phutils
 Type: Package
-Title: Utilities for the Public Health Intelligence Team in Medway
-Version: 1.2.56
-Date: 2017-05-16
+Title: Utilities for Public Health Intelligence 
+Version: 1.3.0
+Date: 2017-05-28
 Author: David Whiting, Mark Chambers, Laura Bottle
 Maintainer: David Whiting  <david.whiting@publichealth.me.uk>
-Description: A small and growing collection of utilities for Public Health
-    Intelligence in Medway.
+Description: A collection of utilities for Public Health Intelligence.
 License: GPL-3
 Encoding: latin1
 RoxygenNote: 6.0.1
